buildscript {
	ext {
		springBootVersion = '1.5.6.RELEASE'
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

apply plugin: 'java'
apply plugin: 'eclipse-wtp'
apply plugin: 'org.springframework.boot'
apply plugin: 'war'

version = '0.0.1-SNAPSHOT'
sourceCompatibility = 1.8

repositories {
	mavenCentral()
}

configurations {
	providedRuntime
}

eclipse {
    classpath {
        downloadJavadoc = true
        downloadSources = true
    }
}

dependencies {
	 //compile('org.springframework.boot:spring-boot-starter-jdbc')
	 compile('org.springframework.boot:spring-boot-starter-web')
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("org.springframework.boot:spring-boot-devtools")
	 providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
	 testCompile('org.springframework.boot:spring-boot-starter-test')
    //compile group: 'commons-io', name: 'commons-io', version: '2.4'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
  // compile group: 'org.thymeleaf', name: 'thymeleaf', version: '3.0.7.RELEASE'
  // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
     testCompile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.8.11.2'
  


	

}
